Fixed lint issues Send 'textDocument/didClose' to language server on file close