@@ -5,6 +5,7 @@ import com.itsaky.lsp.SemanticHighlightsParams;
 import com.itsaky.lsp.services.IDELanguageServer;
 import com.itsaky.lsp.services.IDETextDocumentService;
 import com.itsaky.lsp.services.IDEWorkspaceService;
+import java.util.Collections;
 import java.util.List;
 import java9.util.concurrent.CompletableFuture;
 import org.eclipse.lsp4j.CallHierarchyIncomingCall;
@@ -165,7 +166,7 @@ public class LanguageServerWrapper implements IDELanguageServer {
         
         @Override
         public CompletableFuture<List<SemanticHighlight>> semanticHighlights(SemanticHighlightsParams params) {
-            return CompletableFuture.completedFuture(List.of((SemanticHighlight) null));
+            return CompletableFuture.completedFuture(Collections.singletonList((SemanticHighlight) null));
         }
 
         @Override
